--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-cooking-react-next/app/data/**
+cooking-react-next/app/data/**.json
+cooking-react-next/app/data/**.srt
 .DS_Store
-cooking-react-next/public/images/
+cooking-react-next/public/images/**
 cooking-react-next/public/next.svg
 cooking-react-next/public/vercel.svg
 cooking-react-next/secret.json
