--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fal-ai/serverless-client": "^0.9.1",
     "@fal-ai/serverless-proxy": "^0.7.4",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
+    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
     "@reduxjs/toolkit": "^2.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,11 +25,15 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "next": "14.1.4",
     "openai": "^4.28.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "socket.io": "^4.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
