--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "sass": "^1.79.4",
     "socket.io": "^4.8.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
