--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -37,7 +37,8 @@
     "sass": "^1.79.4",
     "socket.io": "^4.8.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.18.79",
