--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.3.0",
     "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
