--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@fal-ai/serverless-client": "^0.9.1",
     "@fal-ai/serverless-proxy": "^0.7.4",
+    "@google/generative-ai": "^0.21.0",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
