--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "classnames": "^2.5.1",
     "next": "14.1.4",
     "openai": "^4.28.0",
     "react": "^18",
