--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -22,11 +22,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "openai": "^4.28.0",
     "react": "^18",
