--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
-cooking-react-next/app/data/**.json
-cooking-react-next/app/data/**.srt
-.DS_Store
-cooking-react-next/public/images/**
+**/.DS_Store
 cooking-react-next/public/next.svg
 cooking-react-next/public/vercel.svg
+cooking-react-next/public/**.mp4
 cooking-react-next/secret.json
-backend/data/**.json
-backend/data/key_frames/**.jpg
-backend/data/key_frames/**.png
-backend/data/**.mp4
-backend/data/**.srt
-backend/data/audio_output/**
-backend/data/key_frames/**
-backend/data/parser_res/**
-cooking-react-next/public
+backend/data/**
