--- a/cooking-react-next/package.json
+++ b/cooking-react-next/package.json
@@ -21,36 +21,43 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.80",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^16.18.119",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "axios": "^1.6.7",
+    "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "next": "14.1.4",
     "openai": "^4.28.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-player": "^2.14.1",
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "sass": "^1.79.4",
+    "sass": "^1.80.6",
     "socket.io": "^4.8.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^16.18.79",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.18",
+    "@google/generative-ai": "^0.21.0",
+    "@types/node": "^16.18.119",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^4.9.5"
+    "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "typescript": "^5.6.3"
   }
 }
