--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ cooking-react-next/public/vercel.svg
 cooking-react-next/public/**.mp4
 cooking-react-next/secret.json
 backend/data/**
+cooking-react-next/public/**.json
